# bantu

./: .gitignore
.github/workflows/: build.yml
backend/: .env  .env.example  .gitignore  index.js  package-lock.json  package.json
backend/lib/: audit.js  auth.js  companyContext.js  license.js  mailer.js  permissions.js  prisma.js  systemSettings.js  taxTableParser.js  validate.js
backend/middleware/: auth.js  companyContext.js
backend/prisma/: schema.prisma  seed-zimbabwe-settings.js
backend/routes/: admin.js  auditLogs.js  auth.js  backPay.js  bankFiles.js  branches.js  clients.js  companies.js  currencyRates.js  dashboard.js  departments.js  employeeSelf.js  employees.js  grades.js  intelligence.js  leave.js  leaveManagement.js  licenseValidate.js  licenses.js  loans.js  necTables.js  nssaContributions.js  nssaSettings.js  payIncrease.js  payTransactions.js  payroll.js  payrollCalendar.js  payrollCore.js  payrollInputs.js  payrollLogs.js  payrollUsers.js  payslipExports.js  payslipSummaries.js  payslipTransactions.js  payslips.js  periodEnd.js  portals.js  rbzRates.js  reports.js  retroactive.js  (+11 more)
backend/scripts/: create-demo-account.js
backend/utils/: bankFile.js  bankFile.test.js  intelligenceEngine.js  pdfService.js  portals.js  taxEngine.compliance.test.js  taxEngine.js  taxEngine.test.js  validators.js  validators.test.js
frontend/: System.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+94 files in other folders)
